--- a/welcome-page.html
+++ b/welcome-page.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Tuesday Shaw</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/welcome.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
 </head>
-<body>
-
+<body id="background" class="container-fluid">
+<header>
+    <nav id="top-nav">
+        <ul class="nav justify-content-center">
+            <li class="nav-item col-sm-4">
+                <a class="nav-link active" href="resume-page.html">RESUMÉ
+                </a>
+            </li>
+            <li class="nav-item col-sm-4">
+                <a class="nav-link" href="portfolio-page.html">WORK
+                </a>
+            </li>
+            <li class="nav-item col-sm-4">
+                <a class="nav-link" href="contact-page.html">CONTACT
+                </a>
+            </li>
+        </ul>
+    </nav>
+</header>
+<div id="welcome-body">
+    <img id="intro-img" src="img/art-selfie.png" class="img-thumbnail rounded-circle">
+    <p><strong>Tuesday Shaw</strong> is a Junior Web Developer and Artist living in San Antonio, Texas.</p>
+</div>
+<footer id="footer" class="row">
+    <ul class="nav col-sm-12 justify-content-center">
+        <li class="nav-item"><a class="nav-link" href=""><img id="insta-icon" class="img-circle" src="img/insta-icon.png"></a></li>
+        <li class="nav-item"><a class="nav-link" href=""><img id="tweet-icon" class="img-circle" src="img/twitter-icon.png"></a></li>
+    </ul>
+</footer>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
