- Updating Responsiveness and playing with layout

--- a/resume-page.html
+++ b/resume-page.html
@@ -12,15 +12,15 @@
 <header>
     <nav id="top-nav">
         <ul class="nav justify-content-center">
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link active" href="portfolio-page.html">WORK
                 </a>
             </li>
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link" href="welcome-page.html">HOME
                 </a>
             </li>
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link" href="contact-page.html">CONTACT
                 </a>
             </li>
@@ -28,7 +28,7 @@
     </nav>
 </header>
 <div>
-
+    <img id="center-img" src="http://placehold.it/500x500">
 </div>
 <footer id="footer" class="row">
     <ul class="nav col-sm-12 justify-content-center">
