--- a/welcome-page.html
+++ b/welcome-page.html
@@ -8,31 +8,44 @@
     <link rel="stylesheet" type="text/css" href="css/welcome.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
 </head>
-<body id="background" class="container-fluid">
+<body id="background">
 <header>
     <nav id="top-nav">
         <ul class="nav justify-content-center">
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link active" href="resume-page.html">RESUMÉ
                 </a>
             </li>
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link" href="portfolio-page.html">WORK
                 </a>
             </li>
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link" href="contact-page.html">CONTACT
                 </a>
             </li>
         </ul>
     </nav>
 </header>
-<div id="welcome-body">
-    <img id="intro-img" src="img/art-selfie.png" class="img-thumbnail rounded-circle">
-    <p><strong>Tuesday Shaw</strong> is a Junior Web Developer and Artist living in San Antonio, Texas.</p>
+<div class="row justify-content-center">
+    <div class="col">
+        <img class="img-fluid" src="img/rose-art-landing.png">
+    </div>
+    <div class="col">
+        <img id="art-img" class="img-thumbnail rounded-circle" src="img/art-selfie.png" alt="Artwork of the artist">
+    </div>
+    <div class="col">
+        <img class="img-fluid" src="img/rose-art-landing.png">
+    </div>
+</div>
+<div>
+    <div>
+        <h5>Tuesday Shaw</h5>
+        <p>Junior Web Developer and Artist living in San Antonio, Texas.</p>
+    </div>
 </div>
 <footer id="footer" class="row">
-    <ul class="nav col-sm-12 justify-content-center">
+    <ul class="nav col-12 justify-content-center">
         <li class="nav-item"><a class="nav-link" href=""><img id="insta-icon" class="img-circle" src="img/insta-icon.png"></a></li>
         <li class="nav-item"><a class="nav-link" href=""><img id="tweet-icon" class="img-circle" src="img/twitter-icon.png"></a></li>
     </ul>
