--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -12,15 +12,15 @@
 <header>
     <nav id="top-nav">
         <ul class="nav justify-content-center">
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link active" href="resume-page.html">RESUMÉ
                 </a>
             </li>
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link" href="welcome-page.html">HOME
                 </a>
             </li>
-            <li class="nav-item col-sm-4">
+            <li class="nav-item col-4">
                 <a class="nav-link" href="contact-page.html">CONTACT
                 </a>
             </li>
@@ -31,22 +31,26 @@
 <div id="intro-carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img class="d-block img-fluid" src="img/mono-flowers.jpg" alt="First slide">
+            <img class="d-block img-fluid" src="http://placehold.it/350x350" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block img-fluid" src="img/rose1.png" alt="Second slide">
+            <img class="d-block img-fluid" src="http://placehold.it/350x350" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block img-fluid" src="img/chewy.jpg" alt="Third slide">
+            <img class="d-block img-fluid" src="http://placehold.it/350x350" alt="Third slide">
         </div>
-        <a class="carousel-control-prev" href="" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://placehold.it/350x350" alt="Fourth slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://placehold.it/350x350" alt="Fifth slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://placehold.it/350x350" alt="Sixth slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block img-fluid" src="http://placehold.it/350x350" alt="Seventh slide">
+        </div>
     </div>
 </div>
 <h1>WEB DEVELOPING</h1>
