- Updating Responsiveness and playing with layout

--- a/welcome-page.html
+++ b/welcome-page.html
@@ -27,15 +27,15 @@
         </ul>
     </nav>
 </header>
-<div class="row justify-content-center">
+<div id="center-images" class="row text-center">
     <div class="col">
-        <img class="img-fluid" src="img/rose-art-landing.png">
+       <!-- <img class="img-fluid float-right" src="img/nouveau-vector.png">-->
     </div>
     <div class="col">
-        <img id="art-img" class="img-thumbnail rounded-circle" src="img/art-selfie.png" alt="Artwork of the artist">
+        <img id="art-img" class="img-fluid img-thumbnail rounded-circle mx-auto d-block" src="img/art-selfie.png" alt="Artwork of the artist">
     </div>
     <div class="col">
-        <img class="img-fluid" src="img/rose-art-landing.png">
+       <!--<img class="img-fluid float-left " src="img/nouveau-vector.png">-->
     </div>
 </div>
 <div>
