- Updating Responsiveness and playing with layout

--- a/welcome-page.html
+++ b/welcome-page.html
@@ -8,51 +8,75 @@
     <link rel="stylesheet" type="text/css" href="css/welcome.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
 </head>
-<body id="background">
-<header>
-    <nav id="top-nav">
-        <ul class="nav justify-content-center">
-            <li class="nav-item col-4">
-                <a class="nav-link active" href="resume-page.html">RESUMÉ
-                </a>
-            </li>
-            <li class="nav-item col-4">
-                <a class="nav-link" href="portfolio-page.html">WORK
-                </a>
-            </li>
-            <li class="nav-item col-4">
-                <a class="nav-link" href="contact-page.html">CONTACT
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
-<div id="center-images" class="row text-center">
-    <div class="col">
-       <!-- <img class="img-fluid float-right" src="img/nouveau-vector.png">-->
-    </div>
-    <div class="col">
-        <img id="art-img" class="img-fluid img-thumbnail rounded-circle mx-auto d-block" src="img/art-selfie.png" alt="Artwork of the artist">
-    </div>
-    <div class="col">
-       <!--<img class="img-fluid float-left " src="img/nouveau-vector.png">-->
-    </div>
-</div>
-<div>
+<body>
+<div id="background">
     <div>
-        <h5>Tuesday Shaw</h5>
-        <p>Junior Web Developer and Artist living in San Antonio, Texas.</p>
+        <header>
+            <nav id="top-nav">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item col">
+                        <a class="nav-link active" href="resume-page.html">RESUMÉ
+                        </a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="portfolio-page.html">WORK
+                        </a>
+                    </li>
+                    <li class="nav-item col">
+                        <a class="nav-link" href="contact-page.html">CONTACT
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <div>
+        <div>
+            <div id="center-images" class="row text-center">
+                <div class="col">
+                    <img class="img-fluid float-right rose" src="img/rose-line.gif">
+                </div>
+                <div class="col">
+                    <img id="art-img" class="img-fluid img-thumbnail rounded-circle mx-auto d-block"
+                         src="img/art-selfie.png"
+                         alt="Artwork of the artist">
+                </div>
+                <div class="col">
+                    <img class="img-fluid float-left rose" src="img/rose-line.gif">
+                </div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <h5>Tuesday Shaw</h5>
+                    <p>Junior Web Developer and Artist living in San Antonio, Texas.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <footer id="footer" class="row">
+            <ul class="nav col-12 justify-content-center">
+                <li class="nav-item"><a class="nav-link" href=""><img id="insta-icon" class="img-circle"
+                                                                      src="img/insta-icon.png"></a></li>
+                <li class="nav-item"><a class="nav-link" href=""><img id="tweet-icon" class="img-circle"
+                                                                      src="img/twitter-icon.png"></a></li>
+            </ul>
+        </footer>
     </div>
 </div>
-<footer id="footer" class="row">
-    <ul class="nav col-12 justify-content-center">
-        <li class="nav-item"><a class="nav-link" href=""><img id="insta-icon" class="img-circle" src="img/insta-icon.png"></a></li>
-        <li class="nav-item"><a class="nav-link" href=""><img id="tweet-icon" class="img-circle" src="img/twitter-icon.png"></a></li>
-    </ul>
-</footer>
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+        crossorigin="anonymous"></script>
+<script src="js/jquery-ui-1.12.1.custom"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+        integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+        crossorigin="anonymous"></script>
+<script src="js/welcome.js"></script>
 </body>
 </html>
 
