--- a/welcome-page.html
+++ b/welcome-page.html
@@ -10,61 +10,18 @@
 </head>
 <body>
 <div id="background">
-    <div>
-        <header>
-            <nav id="top-nav">
-                <ul class="nav justify-content-center">
-                    <li class="nav-item col">
-                        <a class="nav-link active" href="resume-page.html">RESUMÉ
-                        </a>
-                    </li>
-                    <li class="nav-item col">
-                        <a class="nav-link" href="portfolio-page.html">WORK
-                        </a>
-                    </li>
-                    <li class="nav-item col">
-                        <a class="nav-link" href="contact-page.html">CONTACT
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-    </div>
-    <div>
-        <div>
-            <div id="center-images" class="row text-center">
-                <div class="col">
-                    <img class="img-fluid float-right rose" src="img/rose-line.gif">
-                </div>
-                <div class="col">
-                    <img id="art-img" class="img-fluid img-thumbnail rounded-circle mx-auto d-block"
-                         src="img/art-selfie.png"
-                         alt="Artwork of the artist">
-                </div>
-                <div class="col">
-                    <img class="img-fluid float-left rose" src="img/rose-line.gif">
-                </div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>
-                    <h5>Tuesday Shaw</h5>
-                    <p>Junior Web Developer and Artist living in San Antonio, Texas.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div>
-        <footer id="footer" class="row">
-            <ul class="nav col-12 justify-content-center">
-                <li class="nav-item"><a class="nav-link" href=""><img id="insta-icon" class="img-circle"
-                                                                      src="img/insta-icon.png"></a></li>
-                <li class="nav-item"><a class="nav-link" href=""><img id="tweet-icon" class="img-circle"
-                                                                      src="img/twitter-icon.png"></a></li>
-            </ul>
-        </footer>
-    </div>
+    <header>
+
+
+    </header>
+    <main>
+
+
+    </main>
+    <footer>
+
+
+    </footer>
 </div>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
@@ -81,3 +38,17 @@
 </html>
 
 
+<!--<div class="col">-->
+    <!--<img id="art-img" class="img-fluid img-thumbnail rounded-circle mx-auto d-block"-->
+         <!--src="img/art-selfie.png"-->
+         <!--alt="Artwork of the artist">-->
+<!--</div>-->
+
+<!--<div>-->
+    <!--<div>-->
+        <!--<div>-->
+            <!--<h5>Tuesday Shaw</h5>-->
+            <!--<p>Junior Web Developer and Artist living in San Antonio, Texas.</p>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
