-Making changes and restructuring layout to all pages on personal site. -Making the site one page with dynamically changing center content tied to the nav bar choices with ajax.
(still working on formatting on index page)

--- a/index.html
+++ b/index.html
@@ -2,48 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuesday Shaw</title>
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Cinzel:900|Josefin+Sans:100,400|Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 <body>
 <div id="background">
-    <header id="header">
-        <div>
+    <div id="top-nav">
+        <h1>tuesday shaw</h1>
+        <a href="#" class="nav-text">bio</a>
+        <a href="#" class="nav-text">work</a>
+        <a href="#" class="nav-text">contact</a>
+    </div>
+    <div>
 
-        </div>
-    </header>
-    <main id="main">
-        <div>
-
-        </div>
-    </main>
-    <footer id="footer">
-        <div>
-
-        </div>
-    </footer>
+    </div>
+    <div id="bottom-nav">
+        <p class="nav-text">copyright 2017</p>
+        <a href="#" class="nav-text">linkedin</a>
+        <a href="#" class="nav-text">facebook</a>
+        <a href="#" class="nav-text">instagram</a>
+    </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
-<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<!--<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>-->
 <script src="js/index.js"></script>
 </body>
 </html>
-
-
-<!--<div class="col">-->
-    <!--<img id="art-img" class="img-fluid img-thumbnail rounded-circle mx-auto d-block"-->
-         <!--src="img/art-selfie.png"-->
-         <!--alt="Artwork of the artist">-->
-<!--</div>-->
-
-<!--<div>-->
-    <!--<div>-->
-        <!--<div>-->
-            <!--<h5>Tuesday Shaw</h5>-->
-            <!--<p>Junior Web Developer and Artist living in San Antonio, Texas.</p>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
