Finished index basic css layout.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuesday Shaw</title>
-    <!--<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Cinzel:900|Josefin+Sans:100,400|Open+Sans+Condensed:300" rel="stylesheet">
 </head>
@@ -16,18 +15,17 @@
         <a href="#" class="nav-text">work</a>
         <a href="#" class="nav-text">contact</a>
     </div>
-    <div>
-
+    <div id="center-content">
+        <div id="index-content"></div>
     </div>
     <div id="bottom-nav">
-        <p class="nav-text">copyright 2017</p>
+        <span class="nav-text">2017</span>
         <a href="#" class="nav-text">linkedin</a>
         <a href="#" class="nav-text">facebook</a>
         <a href="#" class="nav-text">instagram</a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
-<!--<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>-->
 <script src="js/index.js"></script>
 </body>
 </html>
