Finished all pages basic html and css layout.

--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
 <body>
 <div id="background">
     <div id="top-nav">
-        <h1>tuesday shaw</h1>
-        <a href="#" class="nav-text">bio</a>
-        <a href="#" class="nav-text">work</a>
-        <a href="#" class="nav-text">contact</a>
+        <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
+        <a href="about-page.html" class="nav-text">about</a>
+        <a href="work-page.html" class="nav-text">work</a>
+        <a href="contact-page.html" class="nav-text">contact</a>
     </div>
     <div id="center-content">
-        <div id="index-content"></div>
+        <div id="index-content">
+            <img id="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <img id="index-art2" src="img/art-selfie.png" alt="Self-portrait of the artist.">
+            <img id="index-art3" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+        </div>
     </div>
     <div id="bottom-nav">
-        <span class="nav-text">2017</span>
-        <a href="#" class="nav-text">linkedin</a>
-        <a href="#" class="nav-text">facebook</a>
-        <a href="#" class="nav-text">instagram</a>
+        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><img class="sm-icon" src="img/linkedin-icon.gif" alt="Link to LinkedIn"></a>
+        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><img class="sm-icon" src="img/facebook-icon.gif" alt="Link to Facebook"></a>
+        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><img class="sm-icon" src="img/instagram-icon.gif" alt="Link to Instagram"></a>
+        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank"><img class="sm-icon" src="img/twitter-icon.gif" alt=""></a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
+
+
