--- a/work-page.html
+++ b/work-page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuesday Shaw</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="css/contact.css">
+    <link rel="stylesheet" type="text/css" href="css/work.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Cinzel:900|Josefin+Sans:100,400|Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 <body>
@@ -18,9 +18,17 @@
     </div>
     <div id="center-content">
         <div id="index-content">
-            <div id="contact">
-                <img id="tuesday-img" src="img/tuesday.JPG" alt=""><br>
-                <p id="contact-text">CONTACT ME AT TUESDAY.SHAW@GMAIL.COM</p>
+            <div id="work-top-row">
+                <a href="https://github.com/tuesdayshaw/simple-simon/" target="_blank"><img class="portfolio" src="img/simple-simon-ss.png" alt=""></a>
+                <img class="portfolio" src="img/red-ss.png" alt="">
+                <img class="portfolio" src="img/pear-ss.png" alt="">
+                <img class="portfolio" src="img/neon-art-ss.png" alt="">
+            </div>
+            <div id="work-bottom-row">
+                <a href="https://github.com/tuesdayshaw/CodeUp_web_exercises/blob/master/weather_map.html/" target="_blank"><img class="portfolio" src="img/weather-map-ss.png" alt=""></a>
+                <img class="portfolio" src="img/bee-ss.png" alt="">
+                <a href="https://github.com/Amberlee-Tuesday/calculator/tree/tuesday/" target="_blank"><img class="portfolio" src="img/js-calc.png" alt=""></a>
+                <img class="portfolio" src="img/dex-ss.png" alt="">
             </div>
         </div>
     </div>
