--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
     <div id="top-nav">
         <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
         <a href="about-page.html" class="nav-text">about</a>
+        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="work-page.html" class="nav-text">work</a>
+        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="contact-page.html" class="nav-text">contact</a>
     </div>
     <div id="center-content">
         <div id="index-content">
-            <img id="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <div class="info-content">
+                <p class="info-facts">Developer</p>
+            </div>
             <img id="index-art2" src="img/art-selfie.png" alt="Self-portrait of the artist.">
-            <img id="index-art3" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <div class="info-content">
+                <p class="info-facts">Artist</p>
+            </div>
         </div>
     </div>
     <div id="bottom-nav">
