Working on css still

--- a/about-page.html
+++ b/about-page.html
@@ -4,33 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuesday Shaw</title>
-    <link rel="SHORTCUT ICON" href="img/favicon.ico" />
+    <link rel="SHORTCUT ICON" href="img/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
-    <link href="https://fonts.googleapis.com/css?family=Abel|Cinzel:900|Josefin+Sans:100,400|Open+Sans+Condensed:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Cinzel:900|Josefin+Sans:100,400|Open+Sans+Condensed:300"
+          rel="stylesheet">
 </head>
 <body>
 <div id="background">
     <div id="top-nav">
         <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
         <a href="about-page.html" class="nav-text">about</a>
+        <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="work-page.html" class="nav-text">work</a>
+        <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="contact-page.html" class="nav-text">contact</a>
     </div>
     <div id="center-content">
         <div id="index-content">
-            <p id="about-text">Jack of All Trades. Creative Thinker. Problem Solver. Natural Leader. Discussion Starter. Trustworthy Confidant.
-                I’ve gained valuable work experience through my travels and career choices. Driven to be better and work harder,
-                I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my passions
-                and interests into the real world and gained tangible experience in exchange. I enjoy life and new experiences.
-                Happy and eager to have an opportunity creating something for you!</p>
+            <h1 id="hello">Hi, I'm Tuesday Shaw</h1>
+            <p id="about-text">
+                Full-Stack JavaScript/Java Web Developer with over a decade of experience between Management, Customer Service, Instruction and
+                Art/Design. I’ve gained valuable work experience through my travels and career choices. Driven to be better and work
+                harder, I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my
+                passions and interests into the real world and gained tangible experience in exchange. I enjoy life and new
+                experiences. Happy to have an opportunity creating something for you!</p>
         </div>
     </div>
     <div id="bottom-nav">
-        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><img src="img/linkedin-icon.gif" alt="Link to LinkedIn"></a>
-        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><img src="img/facebook-icon.gif" alt="Link to Facebook"></a>
-        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><img src="img/instagram-icon.gif" alt="Link to Instagram"></a>
-        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank"><img src="img/twitter-icon.gif" alt=""></a>
+        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank">
+            <button type="" class="social-media-btn">LinkedIn</button>
+        </a>
+        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank">
+            <button type="" class="social-media-btn">Facebook</button>
+        </a>
+        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank">
+            <button type="" class="social-media-btn">Instagram</button>
+        </a>
+        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank">
+            <button type="" class="social-media-btn">Twitter</button>
+        </a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
