--- a/contact-page.html
+++ b/contact-page.html
@@ -14,22 +14,25 @@
     <div id="top-nav">
         <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
         <a href="about-page.html" class="nav-text">about</a>
+        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="work-page.html" class="nav-text">work</a>
+        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="contact-page.html" class="nav-text">contact</a>
     </div>
     <div id="center-content">
         <div id="index-content">
             <div id="contact">
                 <img id="tuesday-img" src="img/tuesday.JPG" alt=""><br>
-                <p id="contact-text">CONTACT ME AT TUESDAY.SHAW@GMAIL.COM</p>
+                <p id="contact-text">CONTACT ME:<br>TUESDAY.SHAW@GMAIL.COM</p>
+
             </div>
         </div>
     </div>
     <div id="bottom-nav">
-        <a href="https://www.linkedin.com/in/tuesday-shaw/" target="_blank" class="nav-text"><img src="img/linkedin-icon.gif" alt="Link to LinkedIn"></a>
-        <a href="https://www.facebook.com/canidmarsart/" target="_blank" class="nav-text"><img src="img/facebook-icon.gif" alt="Link to Facebook"></a>
-        <a href="https://www.instagram.com/canidmarsart/" target="_blank" class="nav-text"><img src="img/instagram-icon.gif" alt="Link to Instagram"></a>
-        <a href="https://www.twitter.com/tuesday_shaw/" target="_blank" class="nav-text"><img src="img/twitter-icon.gif" alt=""></a>
+        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">LinkedIn</button></a>
+        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Facebook</button></a>
+        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Instagram</button></a>
+        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Twitter</button></a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
