--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
     </div>
     <div id="bottom-nav">
-        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><img class="sm-icon" src="img/linkedin-icon.gif" alt="Link to LinkedIn"></a>
-        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><img class="sm-icon" src="img/facebook-icon.gif" alt="Link to Facebook"></a>
-        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><img class="sm-icon" src="img/instagram-icon.gif" alt="Link to Instagram"></a>
-        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank"><img class="sm-icon" src="img/twitter-icon.gif" alt=""></a>
+        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">LinkedIn</button></a>
+        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Facebook</button></a>
+        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Instagram</button></a>
+        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Twitter</button></a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
