--- a/work-page.html
+++ b/work-page.html
@@ -14,30 +14,30 @@
     <div id="top-nav">
         <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
         <a href="about-page.html" class="nav-text">about</a>
+        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="work-page.html" class="nav-text">work</a>
+        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
         <a href="contact-page.html" class="nav-text">contact</a>
     </div>
     <div id="center-content">
         <div id="index-content">
-            <div id="work-top-row">
-                <a href="https://github.com/tuesdayshaw/simple-simon/" target="_blank"><img class="portfolio" src="img/simple-simon-ss.png" alt=""></a>
-                <img class="portfolio" src="img/red-ss.png" alt="">
-                <img class="portfolio" src="img/pear-ss.png" alt="">
-                <img class="portfolio" src="img/neon-art-ss.png" alt="">
-            </div>
-            <div id="work-bottom-row">
-                <a href="https://github.com/tuesdayshaw/CodeUp_web_exercises/blob/master/weather_map.html/" target="_blank"><img class="portfolio" src="img/weather-map-ss.png" alt=""></a>
-                <img class="portfolio" src="img/bee-ss.png" alt="">
-                <a href="https://github.com/Amberlee-Tuesday/calculator/tree/tuesday/" target="_blank"><img class="portfolio" src="img/js-calc.png" alt=""></a>
-                <img class="portfolio" src="img/dex-ss.png" alt="">
+            <div id="work-content">
+                <div id="work-top-row">
+                    <div class="projects"><a class="code-links" href="https://github.com/tuesdayshaw/simple-simon/" target="_blank">Simple Simon</a></div>
+                    <div class="projects"><a class="code-links" href="https://github.com/tuesdayshaw/CodeUp_web_exercises/blob/master/weather_map.html/" target="_blank">Weather Map API</a></div>
+                    <div class="projects"><a class="code-links" href="https://github.com/Amberlee-Tuesday/calculator/tree/tuesday/" target="_blank">Calculator</a></div>
+                </div>
+                <div id="work-bottom-row">
+                    <!--Instagram Facebook, Twitter? API-->
+                </div>
             </div>
         </div>
     </div>
     <div id="bottom-nav">
-        <a href="https://www.linkedin.com/in/tuesday-shaw/" target="_blank" class="nav-text"><img src="img/linkedin-icon.gif" alt="Link to LinkedIn"></a>
-        <a href="https://www.facebook.com/canidmarsart/" target="_blank" class="nav-text"><img src="img/facebook-icon.gif" alt="Link to Facebook"></a>
-        <a href="https://www.instagram.com/canidmarsart/" target="_blank" class="nav-text"><img src="img/instagram-icon.gif" alt="Link to Instagram"></a>
-        <a href="https://www.twitter.com/tuesday_shaw/" target="_blank" class="nav-text"><img src="img/twitter-icon.gif" alt=""></a>
+        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">LinkedIn</button></a>
+        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Facebook</button></a>
+        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Instagram</button></a>
+        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Twitter</button></a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
