Working on media queries for index and about pages

--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuesday Shaw</title>
     <link rel="SHORTCUT ICON" href="img/favicon.ico" />
+    <!--<link rel="stylesheet" type="text/css" href="css/index-phone.css">-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Cinzel:900|Josefin+Sans:100,400|Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 <body>
 <div id="background">
     <div id="top-nav">
-        <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
-        <a href="about-page.html" class="nav-text">about</a>
-        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
-        <a href="work-page.html" class="nav-text">work</a>
-        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
-        <a href="contact-page.html" class="nav-text">contact</a>
+        <div id="nav-name">
+            <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
+        </div>
+        <div id="nav-links">
+            <a href="about-page.html" class="nav-text">about</a>
+            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <a href="work-page.html" class="nav-text">work</a>
+            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <a href="contact-page.html" class="nav-text">contact</a>
+        </div>
     </div>
     <div id="center-content">
         <div id="index-content">
@@ -30,10 +35,11 @@
         </div>
     </div>
     <div id="bottom-nav">
-        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">LinkedIn</button></a>
-        <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Facebook</button></a>
-        <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Instagram</button></a>
-        <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Twitter</button></a>
+        <span id="copyright">Copyright© 2017 Tuesday Shaw</span>
+        <a href="https://www.linkedin.com/in/tuesday-shaw/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">LinkedIn</button></a>
+        <a href="https://www.facebook.com/canidmarsart/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">Facebook</button></a>
+        <a href="https://www.instagram.com/canidmarsart/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">Instagram</button></a>
+        <a href="https://www.twitter.com/tuesday_shaw/" class="bottom-nav-text" target="_blank"><button type="" class="social-media-btn">Twitter</button></a>
     </div>
 </div>
 <script src="js/jquery-3.2.0.js"></script>
