--- a/work-page.html
+++ b/work-page.html
@@ -12,12 +12,16 @@
 <body>
 <div id="background">
     <div id="top-nav">
-        <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
-        <a href="about-page.html" class="nav-text">about</a>
-        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
-        <a href="work-page.html" class="nav-text">work</a>
-        <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
-        <a href="contact-page.html" class="nav-text">contact</a>
+        <div id="nav-name">
+            <a href="index.html" id="home-index"><h1>tuesday shaw</h1></a>
+        </div>
+        <div id="nav-links">
+            <a href="about-page.html" class="nav-text">about</a>
+            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <a href="work-page.html" class="nav-text">work</a>
+            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <a href="contact-page.html" class="nav-text">contact</a>
+        </div>
     </div>
     <div id="center-content">
         <div id="index-content">
@@ -34,6 +38,7 @@
         </div>
     </div>
     <div id="bottom-nav">
+        <span id="copyright">Copyright© 2017 Tuesday Shaw</span>
         <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank"><button type="" class="social-media-btn">LinkedIn</button></a>
         <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Facebook</button></a>
         <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank"><button type="" class="social-media-btn">Instagram</button></a>
