Changes to about text

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         </div>
         <div id="nav-links">
             <a href="about-page.html" class="nav-text">about</a>
-            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
             <a href="work-page.html" class="nav-text">work</a>
-            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <img class="index-art1" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
             <a href="contact-page.html" class="nav-text">contact</a>
         </div>
     </div>
     <div id="center-content">
         <div id="index-content">
-            <div class="info-content">
-                <p class="info-facts" id="dev">Developer</p>
+            <div class="info-content" id="dev">
+                <p class="info-facts">Developer</p>
             </div>
             <img id="index-art2" src="img/art-selfie.png" alt="Self-portrait of the artist.">
             <div class="info-content">
