--- a/about-page.html
+++ b/about-page.html
@@ -26,13 +26,16 @@
     </div>
     <div id="center-content">
         <div id="index-content">
-            <h1 id="hello">Hi, I'm Tuesday Shaw</h1>
+            <h1 id="hello">Hello, I'm Tuesday Shaw</h1>
             <p id="about-text">
-                Full-Stack JavaScript/Java Web Developer with over a decade of experience between Management, Customer Service, Instruction and
-                Art/Design. I’ve gained valuable work experience through my travels and career choices. Driven to be better and work
-                harder, I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my
-                passions and interests into the real world and gained tangible experience in exchange. I enjoy life and new
-                experiences. Happy to have an opportunity creating something for you!</p>
+                Web developer with CSS, JavaScript and Java experience transitioning from 10+ years experience in art/design, instruction and management now focused on pursuing creative strategies for front or back-end development to leverage my
+                experience and technical knowledge for great team.
+                <br/>
+                <br/>
+                Drawn to front-end design and development with an eye for design and clean code.
+                <br/>
+                <br/>
+                Driven to be better and work harder, I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my passions and interests into the real world and gained tangible experience in exchange. I enjoy life and new experiences. Happy to have an opportunity creating something for you!</p>
         </div>
     </div>
     <div id="bottom-nav">
