Contact image responsiveness

--- a/work-page.html
+++ b/work-page.html
@@ -27,12 +27,24 @@
         <div id="index-content">
             <div id="work-content">
                 <div id="work-top-row">
-                    <div class="projects"><a class="code-links" href="https://github.com/tuesdayshaw/simple-simon/" target="_blank">Simple Simon</a></div>
-                    <div class="projects"><a class="code-links" href="https://github.com/tuesdayshaw/CodeUp_web_exercises/blob/master/weather_map.html/" target="_blank">Weather Map API</a></div>
-                    <div class="projects"><a class="code-links" href="https://github.com/Amberlee-Tuesday/calculator/tree/tuesday/" target="_blank">Calculator</a></div>
+                    <div class="projects">
+                        <a class="code-links" href="https://github.com/tuesdayshaw/spring-blog" target="_blank">WoofBook</a>
+                        <p>Blog site for animal lovers</p>
+                        <img class="project-img" src="img/woofbook.png" alt="">
+                    </div>
+                    <div class="projects">
+                        <a class="code-links" href="https://github.com/tuesdayshaw/mammoth-adlister/tree/passwords_exercises" target="_blank">ListSpot</a>
+                        <p>Classifieds site for community listings</p>
+                        <img class="project-img" src="img/listspot.png" alt="">
+                    </div>
+                    <div class="projects">
+                        <a class="code-links" href="https://get-it.press" target="_blank">Get It!</a>
+                        <p>Grocery Lists application with user preferences, barcode scanning and sharing features</p>
+                        <img class="project-img" src="img/getit.png" alt="">
+                    </div>
                 </div>
                 <div id="work-bottom-row">
-                    <!--Instagram Facebook, Twitter? API-->
+                    <!--Instagram, Facebook, Twitter? API-->
                 </div>
             </div>
         </div>
