Work/Project Page responsiveness

--- a/work-page.html
+++ b/work-page.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="projects">
                         <a class="code-links" href="https://get-it.press" target="_blank">Get It!</a>
-                        <p>Grocery Lists application with user preferences, barcode scanning and sharing features</p>
+                        <p>Grocery Lists application built by a team of three with user preferences, barcode scanning and sharing features</p>
                         <img class="project-img" src="img/getit.png" alt="">
                     </div>
                 </div>
