update "about" text and css

--- a/about-page.html
+++ b/about-page.html
@@ -28,14 +28,13 @@
         <div id="index-content">
             <h1 id="hello">Hello, I'm Tuesday Shaw</h1>
             <p id="about-text">
-                Web developer with CSS, JavaScript and Java experience transitioning from 10+ years experience in art/design, instruction and management now focused on pursuing creative strategies for front or back-end development to leverage my
-                experience and technical knowledge for great team.
+                Developer with CSS, JavaScript, Java, PHP and WordPress experience.
                 <br/>
                 <br/>
-                Drawn to front-end design and development with an eye for design and clean code.
+                Drawn to design and full-stack development.
                 <br/>
                 <br/>
-                Driven to be better and work harder, I flourish under creative environments. Ambitious but most importantly a team player. I’ve followed my passions and interests into the real world and gained tangible experience in exchange. I enjoy life and new experiences. Happy to have an opportunity creating something for you!</p>
+                Happy to have an opportunity creating something for you!</p>
         </div>
     </div>
     <div id="bottom-nav">
