--- a/about-page.html
+++ b/about-page.html
@@ -18,9 +18,9 @@
         </div>
         <div id="nav-links">
             <a href="about-page.html" class="nav-text">about</a>
-            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <img class="index-art1 index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
             <a href="work-page.html" class="nav-text">work</a>
-            <img class="index-art1" class="index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
+            <img class="index-art1 index-rose" src="img/rose-line.gif" alt="Rose line illustration by the artist.">
             <a href="contact-page.html" class="nav-text">contact</a>
         </div>
     </div>
@@ -40,16 +40,16 @@
     <div id="bottom-nav">
         <span id="copyright">Copyright© 2017 Tuesday Shaw</span>
         <a href="https://www.linkedin.com/in/tuesday-shaw/" class="nav-text" target="_blank">
-            <button type="" class="social-media-btn">LinkedIn</button>
+            <button type="submit" class="social-media-btn">LinkedIn</button>
         </a>
         <a href="https://www.facebook.com/canidmarsart/" class="nav-text" target="_blank">
-            <button type="" class="social-media-btn">Facebook</button>
+            <button type="submit" class="social-media-btn">Facebook</button>
         </a>
         <a href="https://www.instagram.com/canidmarsart/" class="nav-text" target="_blank">
-            <button type="" class="social-media-btn">Instagram</button>
+            <button type="submit" class="social-media-btn">Instagram</button>
         </a>
         <a href="https://www.twitter.com/tuesday_shaw/" class="nav-text" target="_blank">
-            <button type="" class="social-media-btn">Twitter</button>
+            <button type="submit" class="social-media-btn">Twitter</button>
         </a>
     </div>
 </div>
